// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly return VirtualMachine with actions disabled 1`] = `
Array [
  Object {
    "click": [Function],
    "id": "edit",
    "title": "Edit VirtualMachine",
  },
  Object {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  Object {
    "click": [Function],
    "id": "delete",
    "title": "Delete VirtualMachine",
  },
]
`;

exports[`Correctly return VirtualMachine with actions enabled 1`] = `
Array [
  Object {
    "click": [Function],
    "id": "startVM",
    "title": "Start VirtualMachine",
  },
  Object {
    "click": [Function],
    "id": "stopVM",
    "title": "Stop VirtualMachine",
  },
  Object {
    "click": [Function],
    "id": "restartVM",
    "title": "Restart VirtualMachine",
  },
  Object {
    "click": [Function],
    "id": "pauseVM",
    "title": "Pause VirtualMachine",
  },
  Object {
    "click": [Function],
    "id": "unpauseVM",
    "title": "Unpause VirtualMachine",
  },
  Object {
    "addSeparator": true,
    "click": [Function],
    "id": "edit",
    "title": "Edit VirtualMachine",
  },
  Object {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  Object {
    "click": [Function],
    "id": "delete",
    "title": "Delete VirtualMachine",
  },
]
`;

exports[`Correctly return empty row Actions for Application 1`] = `
Array [
  Object {
    "click": [Function],
    "id": "view-application",
    "title": "View Application",
  },
  Object {
    "click": [Function],
    "id": "view-application-topology",
    "title": "View Application topology",
  },
  Object {
    "click": [Function],
    "id": "edit",
    "title": "Edit Application",
  },
  Object {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  Object {
    "click": [Function],
    "id": "delete",
    "title": "Delete Application",
  },
]
`;

exports[`Correctly return empty row Actions for restricted resource 1`] = `Array []`;

exports[`Correctly return row Actions 1`] = `
Array [
  Object {
    "click": [Function],
    "id": "edit",
    "title": "Edit Pod",
  },
  Object {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  Object {
    "click": [Function],
    "id": "delete",
    "title": "Delete Pod",
  },
]
`;

exports[`Correctly return row Actions for Application in global search 1`] = `
Array [
  Object {
    "click": [Function],
    "id": "view-application",
    "title": "View Application",
  },
  Object {
    "click": [Function],
    "id": "view-application-topology",
    "title": "View Application topology",
  },
  Object {
    "click": [Function],
    "id": "edit",
    "title": "Edit Application",
  },
  Object {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  Object {
    "click": [Function],
    "id": "delete",
    "title": "Delete Application",
  },
]
`;
